# pixel-pipeline-backend

./: .dockerignore  .env.example  .gitignore  .repomixignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy-aws-ec2.yml
app/: main.py
app/api/: dependencies.py  router.py  routes.py
app/api/v1/: api.py
app/api/v1/endpoints/: cleanup.py  downscale.py  health.py  pipeline.py  pixelize.py  remove_bg.py  upload.py
app/core/: cleanup.py  config.py  downscale.py  exceptions.py  handlers.py  logging.py  pixelize.py
app/infrastructure/database/: __init__.py  engine.py  session.py
app/infrastructure/imaging/: rembg_client.py
app/infrastructure/storage/: s3_client.py
app/models/: __init__.py  image.py
app/schemas/: cleanup.py  downscale.py  image.py  pipeline.py  pixelize.py
app/services/: cleanup_service.py  downscale_service.py  image_service.py  pipeline_service.py  pixelize_service.py  storage_service.py
backend_migrations/: env.py
backend_migrations/versions/: 0645a87cd34f_add_pipeline_files_table.py  92e62c76cc1a_add_target_width_and_target_height_to_.py  95b1a283c466_update_migrations.py  a64cdc62c8d8_initial_tables.py  adc1a1a576a5_update_cleanup_image_model.py
document/: fastapi_refactoring_guide.md  github_actions_aws_deploy.md  pixel_art_pipeline_research.md  upgrade_algorithms.md
scripts/: migrate.sh  start.sh  upgrade.sh
